syntax = "proto3";

package domain;
option go_package = "marketplace-services/pkg/domain";

message RemovedDeviceEvent {
    string address = 1;
}